--- a/Sonic website!/Main.html
+++ b/Sonic website!/Main.html
@@ -18,7 +18,7 @@
    </div>
 <div id="all_nav">
    <div id="nav1">
-    <img src="image.png">
+    <a href="main1.html"><img src="image.png"></a>
     <div class="tag">
         <a href="#game"><span>GAMES</span></a>
     </div>
@@ -85,7 +85,7 @@
       <source src="Sonic Rumble – Skill up and show off!.mp4" type="video/mp4">
     </video>
 
-    <video id="video3" class="video" autoplay controls style="display: none;">
+    <video id="video3" class="video" muted autoplay controls style="display: none;">
       <source src="SONIC X SHADOW GENERATIONS - Story Trailer.mp4" type="video/mp4">
     </video>
   </div>
