--- a/Sonic website!/sonic.html
+++ b/Sonic website!/sonic.html
@@ -18,7 +18,7 @@
    </div>
 <div id="all_nav">
    <div id="nav1">
-    <img src="image.png">
+    <a href="main1.html"><img src="image.png"></a>
     <div class="tag">
         <a href="#game"><span>GAMES</span></a>
     </div>
