--- a/day 57/classwork/cw2.html
+++ b/day 57/classwork/cw2.html
@@ -2,7 +2,7 @@
 <html lang="ka">
 <head>
   <meta charset="UTF-8">
-  <title>Flex დავალება</title>
+  <title>Flex ა</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <style>
